[WK2] WebPage::handleEditingKeyboardEvent does not check whether the node allows editing. https://bugs.webkit.org/show_bug.cgi?id=92364

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-07-26
Reviewed by Kenneth Rohde Christiansen.

Added a check whether the input node allows editing. If editing is not allowed
text input event will not be emitted.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::handleEditingKeyboardEvent):

Canonical link: https://commits.webkit.org/110168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123732 268f45cc-cd09-0410-ab3c-d52691b4dbfc